overflow fix

--- a/style/normalize.css
+++ b/style/normalize.css
@@ -5,7 +5,6 @@ html {
   }
   
   body {
-    overflow: hidden;
     box-sizing: border-box;
     margin: 0;
   }
