--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,7 @@
 }
 
 body {
+    overflow: hidden;
     scroll-behavior: smooth;
 }
 
